--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ section.main span {
     font-weight: bold;
 }
 
-section.main p {
+section.main tt {
     position: relative;
     top: 50%;
     border-right: 2px solid rgba(255, 255, 255, .75);
